include autotune/plugins/adaptivesequence/src/Makefile.am
include autotune/plugins/compilerflags/src/Makefile.am
include autotune/plugins/debug/src/Makefile.am
include autotune/plugins/demo/src/Makefile.am
include autotune/plugins/dvfs/src/Makefile.am
include autotune/plugins/fixedsequence/src/Makefile.am
include autotune/plugins/masterworker/src/Makefile.am
include autotune/plugins/mpicap/src/Makefile.am
include autotune/plugins/mpiparameters/src/Makefile.am
include autotune/plugins/pcap/src/Makefile.am
include autotune/plugins/pcap-speedup/src/Makefile.am
include autotune/plugins/pipeline/src/Makefile.am
include autotune/plugins/romio/src/Makefile.am
include autotune/plugins/skeleton/src/Makefile.am
include autotune/plugins/dvfs_taurus/src/Makefile.am
include autotune/plugins/mpit_cvars/src/Makefile.am
include autotune/plugins/test/src/Makefile.am
include autotune/plugins/user/src/Makefile.am

if DEVELOPER_MODE
include autotune/plugins/tutorial/src/Makefile.am
endif
